--- a/style.css
+++ b/style.css
@@ -28,14 +28,15 @@ body, html {
 }
 
 svg {
-    width: 20%;  /* Ajustar el tamaño del SVG */
-    max-width: 200px;  /* Ajustar el tamaño máximo del SVG */
-    height: auto;  /* Mantener la relación de aspecto */
+    width: 20%;
+    max-width: 200px;
+    height: auto;
+    overflow: visible;
 }
 
 .wave {
     animation: waveAnimation 2s ease-in-out infinite;
-    transform-origin: center bottom;  /* Asegurar que la animación se realice desde el centro inferior */
+    transform-origin: center bottom;
 }
 
 .wave1 {
@@ -60,7 +61,7 @@ svg {
 
 @keyframes waveAnimation {
     0%, 100% { transform: scaleY(1); }
-    50% { transform: scaleY(1.1); }  /* Reducir la escala para que no se salga del contenedor */
+    50% { transform: scaleY(1.15); }
 }
 
 .transcript-container {
